# BCRAFT_Test

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 024fc116cd74_.py  14381fbeec0f_create_table.py
src/config/: nginx.conf  settings.py
src/database/: base.py
src/database/models/: __init__.py  models.py
src/routers/: cook_step.py  ingredient.py  recipe.py  user.py
src/schemas/: cook_step.py  ingredient.py  rate.py  recipe.py  token.py  user.py
src/services/: cook_steps.py  ingredients.py  recipes.py  utils.py
src/services/user/: hash_password.py  token.py  user.py
tests/: conftest.py  test_cook_step.py  test_ingredient.py  test_recipe.py  test_user.py
